# grag_system

./: .gitignore  404.html  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: ci.yml
architecture/: index.html
changelog/: index.html
docs/: api.md  architecture.md  changelog.md  examples.md  faq.md  index.md  installation.md  rl.md  roadmap.md
examples/: quickstart.py
grag/: __init__.py  cli.py
grag/core/: __init__.py  config.py  models.py  pipeline.py
grag/evaluation/: critic.py
grag/extraction/: __init__.py  relation_extractor.py
grag/graph/: knowledge_graph.py
grag/memory/: memory_store.py
grag/reasoning/: graph_reasoner.py
grag/retrieval/: hybrid_retriever.py  query_understanding.py
grag/rl/: reward_engine.py
quickstart/: index.html
search/: search_index.json
site/api/: index.html
site/examples/: index.html
site/faq/: index.html
site/installation/: index.html
site/rl/: index.html
site/roadmap/: index.html
tests/: test_grag.py
