[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "grag-system"
version = "1.0.0"
description = "Production-grade Graph RAG with RL self-improvement and multi-hop reasoning"
readme = "README.md"
authors = [{name = "Bobby Nandigam", email = "bobbynandigam.official@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "networkx>=3.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
ml = ["sentence-transformers>=2.2", "torch>=2.0"]
nlp = ["spacy>=3.5"]
openai = ["openai>=1.0"]
all = ["sentence-transformers>=2.2", "torch>=2.0", "spacy>=3.5", "openai>=1.0", "faiss-cpu>=1.7"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "black>=23.0", "isort>=5.12", "mypy>=1.0", "ruff>=0.1"]

[project.scripts]
grag = "grag.cli:main"

[project.urls]
Homepage = "https://github.com/bobby-nandigam/grag_system"
Documentation = "https://github.com/bobby-nandigam/grag_system#readme"
Repository = "https://github.com/bobby-nandigam/grag_system"
Issues = "https://github.com/bobby-nandigam/grag_system/issues"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP"]
